feat: active count, portret logic